<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:orientation="vertical"-->
<!--    android:padding="16dp">-->

<!--    &lt;!&ndash; Image of Batik &ndash;&gt;-->
<!--    <ImageView-->
<!--        android:id="@+id/imgBatik"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="250dp"-->
<!--        android:contentDescription="@string/batik_image_desc"-->
<!--        android:scaleType="centerCrop"-->
<!--        tools:src="@tools:sample/backgrounds/scenic"/>-->

<!--    &lt;!&ndash; Name of Batik &ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/tvBatikName"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/title_detail" />-->

<!--    &lt;!&ndash; Description of Batik &ndash;&gt;-->
    <!--    <TextView-->
    <!--        android:id="@+id/tvBatikDescription"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:textSize="16sp"-->
    <!--        android:text="@string/description_detail" />-->

    <!--</LinearLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Image of Batik -->
    <ImageView
    android:id="@+id/imgBatik"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:contentDescription="@string/batik_image_desc"
    android:scaleType="centerCrop"
    tools:src="@tools:sample/backgrounds/scenic"/>

    <!-- Name of Batik -->
    <TextView
    android:id="@+id/tvBatikName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:text="@string/title_detail" />

    <!-- Asal  Title -->
    <TextView
        android:id="@+id/tvAsalTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/asal"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Asal  Content -->
    <TextView
        android:id="@+id/tvAsalContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        tools:text="AsalContent" />

    <!-- Sejarah Title -->
    <TextView
    android:id="@+id/tvSejarahTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/sejarah"
    android:textSize="18sp"
    android:textStyle="bold" />

    <!-- Sejarah  Content -->
    <TextView
    android:id="@+id/tvSejarahContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textSize="16sp"
    tools:text="Content" />

    <!-- Filosofi  Title -->
    <TextView
    android:id="@+id/tvFilosofiTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/filosofi"
    android:textSize="18sp"
    android:textStyle="bold" />

    <!-- Filosofi  Content -->
    <TextView
    android:id="@+id/tvFilosofiContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textSize="16sp"
    tools:text="Filosofi content" />


</LinearLayout>

